variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: type int
var x : int = 0
        ^