variables.Variables.scala.code
var x : int = 0
while (estSurBiscuit()==false)	{
  avance()
  x=x+1
}
prendBiscuit()
recule(x)
poseBiscuit()